[gd_scene load_steps=4 format=3 uid="uid://gobjlpuvfmm8"]

[ext_resource type="Script" uid="uid://cnhikt5heakgg" path="res://scenes/character/ik_character_mesh.gd" id="1_b7r8g"]
[ext_resource type="PackedScene" uid="uid://dxgxjvo8bvmo1" path="res://assets/characters/Mixamo/MixamoRacer.fbx" id="2_034on"]
[ext_resource type="Script" uid="uid://dhlwot1rrwitp" path="res://scenes/character/ik_start_script.gd" id="3_hiykm"]

[node name="IKCharacterMesh" type="Node3D" node_paths=PackedStringArray("skel", "head_target", "left_arm_target", "right_arm_target", "butt_target", "left_leg_target", "right_leg_target")]
script = ExtResource("1_b7r8g")
skel = NodePath("MixamoRacer/Skeleton3D")
head_target = NodePath("Targets/HeadTarget")
left_arm_target = NodePath("Targets/LeftArmTarget")
right_arm_target = NodePath("Targets/RightArmTarget")
butt_target = NodePath("Targets/ButtTarget")
left_leg_target = NodePath("Targets/LeftLegTarget")
right_leg_target = NodePath("Targets/RightLegTarget")

[node name="MixamoRacer" parent="." instance=ExtResource("2_034on")]

[node name="Skeleton3D" parent="MixamoRacer" index="0"]
bones/0/position = Vector3(0, 0.8325197, 0)
bones/0/rotation = Quaternion(-0.098452166, 0.017347036, 0.001777114, 0.9949891)
bones/1/rotation = Quaternion(0.034887537, -0.03561846, 0.030996146, 0.9982753)
bones/2/rotation = Quaternion(0.029627217, -0.018389555, 0.0063354806, 0.99937177)
bones/3/rotation = Quaternion(0.029617313, -0.018185338, 0.006805207, 0.9993727)
bones/4/rotation = Quaternion(0.16386226, -0.0006864143, 0.0079627875, 0.98645085)
bones/5/rotation = Quaternion(0.1163598, -0.00030374381, 0.007986608, 0.99317497)
bones/7/rotation = Quaternion(-0.5051158, -0.46667194, 0.61004233, -0.3936036)
bones/8/rotation = Quaternion(0.31801856, -0.045004096, -0.1184464, 0.9395793)
bones/9/rotation = Quaternion(0.069111, -0.0010518562, 0.772178, 0.6316358)
bones/10/rotation = Quaternion(-0.05072942, 0.4047327, -0.30782837, 0.85956955)
bones/11/rotation = Quaternion(0.16930608, 0.113110155, 0.14957051, 0.96755886)
bones/12/rotation = Quaternion(0.05503097, -0.026924042, -0.12155372, 0.9906924)
bones/13/rotation = Quaternion(-0.01540187, -0.011922935, 0.089324266, 0.9958122)
bones/15/rotation = Quaternion(0.21797971, 0.016731013, 0.04419408, 0.9748086)
bones/16/rotation = Quaternion(0.4812807, -6.802962e-05, -0.06080615, 0.874455)
bones/17/rotation = Quaternion(0.48128456, 8.482183e-05, -0.06090021, 0.87444633)
bones/19/rotation = Quaternion(0.22686525, 0.012516623, 0.038322635, 0.9730915)
bones/20/rotation = Quaternion(0.59496003, -0.00010890281, -0.07958537, 0.79980546)
bones/21/rotation = Quaternion(0.5947776, 1.2543054e-05, -0.08008266, 0.7998916)
bones/23/rotation = Quaternion(0.13016304, 0.0030358885, 0.034360215, 0.9908924)
bones/24/rotation = Quaternion(0.8289294, -0.0013936674, -0.1127745, 0.54786503)
bones/25/rotation = Quaternion(0.6368171, 0.0009193338, -0.08898429, 0.76586235)
bones/27/rotation = Quaternion(0.33914298, 0.02082902, -0.040486872, 0.9396325)
bones/28/rotation = Quaternion(0.63240063, 0.023373768, -0.07010398, 0.7711086)
bones/29/rotation = Quaternion(0.62194824, 8.7636996e-05, -0.09285997, 0.777533)
bones/31/rotation = Quaternion(0.50994015, -0.4316458, 0.6759163, 0.3110949)
bones/32/rotation = Quaternion(0.15569986, 0.16387783, -0.062304962, 0.9721213)
bones/33/rotation = Quaternion(0.04512638, 0.0014076838, -0.5050068, 0.86193377)
bones/34/rotation = Quaternion(-0.12505244, -0.35480863, 0.0084640635, 0.9264994)
bones/35/rotation = Quaternion(0.22846729, -0.02228838, -0.16702446, 0.95885813)
bones/36/rotation = Quaternion(0.06620668, -0.0067436206, 0.20658985, 0.97616184)
bones/37/rotation = Quaternion(-0.03487094, -0.012899209, -0.15540268, 0.9871513)
bones/39/rotation = Quaternion(0.4645824, -0.026778221, 0.0052118325, 0.88510966)
bones/40/rotation = Quaternion(0.59084475, 0.00012763217, 0.068765886, 0.80384934)
bones/41/rotation = Quaternion(0.5908393, -0.00019986671, 0.06875505, 0.8038542)
bones/43/rotation = Quaternion(0.42345697, -0.021562232, 0.002056504, 0.9056573)
bones/44/rotation = Quaternion(0.56331027, 2.8584618e-06, 0.06959526, 0.8233092)
bones/45/rotation = Quaternion(0.5633468, -0.00035524543, 0.069542676, 0.8232886)
bones/47/rotation = Quaternion(0.39814234, -0.019276766, 0.002027654, 0.91711897)
bones/48/rotation = Quaternion(0.5700714, 0.00015480757, 0.07295679, 0.8183495)
bones/49/rotation = Quaternion(0.57009476, -0.0003608271, 0.07299428, 0.81832993)
bones/51/rotation = Quaternion(0.4262804, -0.019536754, 0.008308313, 0.90434206)
bones/52/rotation = Quaternion(0.6104946, -0.00029184905, 0.08047118, 0.7879218)
bones/53/rotation = Quaternion(0.61048734, 0.00015213482, 0.079517506, 0.78802425)
bones/55/rotation = Quaternion(0.06861775, 0.33184657, 0.93949455, -0.05019605)
bones/56/rotation = Quaternion(-0.692904, -0.059098862, 0.049282406, 0.7169119)
bones/57/rotation = Quaternion(0.30443388, -0.075109385, 0.19406909, 0.9295246)
bones/58/rotation = Quaternion(0.33999866, -0.07392055, 0.02144013, 0.9372711)
bones/60/rotation = Quaternion(-0.095939666, 0.15688877, 0.98226446, -0.036580417)
bones/61/rotation = Quaternion(-0.44984385, -0.04404455, 0.008964884, 0.8919755)
bones/62/rotation = Quaternion(0.6033191, 0.23516077, -0.17193255, 0.74239117)
bones/63/rotation = Quaternion(0.32396698, 0.06544195, -0.02024301, 0.9435852)

[node name="LeftArmIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="1"]
unique_name_in_owner = true
root_bone = &"mixamorig6_LeftArm"
tip_bone = &"mixamorig6_LeftHand"
use_magnet = true
target_node = NodePath("../../../Targets/LeftArmTarget")
script = ExtResource("3_hiykm")

[node name="RightArmIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="2"]
unique_name_in_owner = true
root_bone = &"mixamorig6_RightArm"
tip_bone = &"mixamorig6_RightHand"
use_magnet = true
target_node = NodePath("../../../Targets/RightArmTarget")
script = ExtResource("3_hiykm")

[node name="LeftLegIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="3"]
unique_name_in_owner = true
root_bone = &"mixamorig6_LeftUpLeg"
tip_bone = &"mixamorig6_LeftFoot"
use_magnet = true
magnet = Vector3(0.1, 0, 1)
target_node = NodePath("../../../Targets/LeftLegTarget")
script = ExtResource("3_hiykm")

[node name="RightLegIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="4"]
unique_name_in_owner = true
root_bone = &"mixamorig6_RightUpLeg"
tip_bone = &"mixamorig6_RightFoot"
use_magnet = true
magnet = Vector3(-0.1, 0, 1)
target_node = NodePath("../../../Targets/RightLegTarget")
script = ExtResource("3_hiykm")

[node name="HeadIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="5"]
unique_name_in_owner = true
root_bone = &"mixamorig6_Neck"
tip_bone = &"mixamorig6_Head"
target_node = NodePath("../../../Targets/HeadTarget")
script = ExtResource("3_hiykm")

[node name="NeckIK" type="SkeletonIK3D" parent="MixamoRacer/Skeleton3D" index="6"]
unique_name_in_owner = true
root_bone = &"mixamorig6_Spine"
tip_bone = &"mixamorig6_Neck"
override_tip_basis = false
target_node = NodePath("../../../Targets/NeckTarget")
script = ExtResource("3_hiykm")

[node name="Targets" type="Node3D" parent="."]

[node name="HeadTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0, 1.7, 0)

[node name="NeckTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, 1.69, 0)

[node name="LeftArmTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(1.9106855e-15, -4.371139e-08, -1, -1, -4.371139e-08, 0, -4.371139e-08, 1, -4.371139e-08, 0.25, 0.25, 0.15)

[node name="RightArmTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(8.742278e-08, 4.3711395e-08, 1, 1, 7.54979e-08, -8.742278e-08, -7.549791e-08, 1, -4.371139e-08, -0.25, 0.25, 0.15)

[node name="ButtTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8325197, 0)

[node name="LeftLegTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(-0.9982336, 0.03612911, -0.047162842, -0.059410855, -0.60704976, 0.7924393, -6.939984e-08, 0.7938415, 0.60812396, 0.2, 0.04, 0)

[node name="RightLegTarget" type="Marker3D" parent="Targets"]
unique_name_in_owner = true
transform = Transform3D(-0.9982256, 0.036801673, -0.046809737, -0.05953972, -0.60723305, 0.7922895, 0.0007331595, 0.7936708, 0.60834676, -0.2, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[editable path="MixamoRacer"]
